Feat: total recipe 초기
